--- a/testdata/knative/canaryexp.yaml
+++ b/testdata/knative/canaryexp.yaml
@@ -1,4 +1,4 @@
-apiVersion: iter8.tools/v2alpha1
+apiVersion: iter8.tools/v2alpha2
 kind: Experiment
 metadata:
   name: experiment-1
@@ -9,8 +9,7 @@ spec:
     testingPattern: Canary
     actions:
       start:
-      - library: knative
-        task: init-experiment
+      - task: knative/init-experiment
   criteria:
     objectives:
     - metric: mean-latency
