--- a/testdata/experiment5.yaml
+++ b/testdata/experiment5.yaml
@@ -37,7 +37,7 @@ spec:
         value: revision2
       weightObjRef:
         apiVersion: serving.kubeflow.org/v1alpha2
-        fieldPath: /spec/canaryTrafficPercent
+        fieldPath: .spec.canaryTrafficPercent
         kind: InferenceService
         name: sklearn-iris
         namespace: default
