--- a/testdata/experiment8.yaml
+++ b/testdata/experiment8.yaml
@@ -62,6 +62,7 @@ spec:
           - name: query
             value: "(sum(increase(revision_app_request_latencies_sum{service_name=~'.*$name'}[$interval]))or on() vector(0)) / (sum(increase(revision_app_request_latencies_count{service_name=~'.*$name'}[$interval])) or on() vector(0))"
           provider: prometheus
+          jqExpression: ".data.result[0].value[1] | tonumber"
           sampleSize: request-count
           type: gauge
           units: milliseconds
@@ -87,6 +88,7 @@ spec:
           - name: query
             value: "(sum(increase(revision_app_request_latencies_sum{service_name=~'.*$name'}[$interval]))or on() vector(0)) / (sum(increase(revision_app_request_latencies_count{service_name=~'.*$name'}[$interval])) or on() vector(0))"
           provider: prometheus
+          jqExpression: ".data.result[0].value[1] | tonumber"
           sampleSize: request-count
           type: gauge
           urlTemplate: url
@@ -111,6 +113,7 @@ spec:
           - name: query
             value: "(sum(increase(revision_app_request_latencies_sum{service_name=~'.*$name'}[$interval]))or on() vector(0)) / (sum(increase(revision_app_request_latencies_count{service_name=~'.*$name'}[$interval])) or on() vector(0))"
           provider: prometheus
+          jqExpression: ".data.result[0].value[1] | tonumber"
           type: counter
           urlTemplate: url
       name: request-count
@@ -134,6 +137,7 @@ spec:
           - name: query
             value: "(sum(increase(revision_app_request_latencies_sum{service_name=~'.*$name'}[$interval]))or on() vector(0)) / (sum(increase(revision_app_request_latencies_count{service_name=~'.*$name'}[$interval])) or on() vector(0))"
           provider: prometheus
+          jqExpression: ".data.result[0].value[1] | tonumber"
           sampleSize: request-count
           type: gauge
           units: milliseconds
