--- a/testdata/garbage.yaml
+++ b/testdata/garbage.yaml
@@ -16,6 +16,7 @@ spec:
       metricObj: 
         apiVersion: iter8crease(revision_app_request_latencies_count{response_code_class!='2xx',service_name=~'.*$name'}[$interval])) or on() vector(0)) / (sum(increase(revision_app_request_latencies_count{service_name=~'.*$name'}[$interval])) or on() vector(0))"
           provider: prometheus
+          jqExpression: ".data.result[0].value[1] | tonumber"
           sampleSize: request-count
           type: gauge
       name: error-rate
@@ -27,6 +28,7 @@ spec:
           annotations: 
             kubectl.kubernetes.io/last-applied-configuration: "{\"apiVersion\":\"iter8.tools/v2alpha2 "sum(increase(revision_app_request_latencies_count{service_name=~'.*$name'}[$interval])) or on() vector(0)"
           provider: prometheus
+          jqExpression: ".data.result[0].value[1] | tonumber"
           type: counter
           urlTemplate: url
       name: request-count
@@ -50,6 +52,7 @@ spec:
           - name: query
             value: "(sum(increase(revision_app_request_latencies_sum{service_name=~'.*$name'}[$interval]))or on() vector(0)) / (sum(increase(revision_app_request_latencies_count{service_name=~'.*$name'}[$interval])) or on() vector(0))"
           provider: prometheus
+          jqExpression: ".data.result[0].value[1] | tonumber"
           sampleSize: request-count
           type: gauge
           units: milliseconds
