--- a/.github/workflows/build-and-push.yaml
+++ b/.github/workflows/build-and-push.yaml
@@ -41,7 +41,17 @@ jobs:
         sudo mv /tmp/kubebuilder_2.3.1_${os}_${arch} /usr/local/kubebuilder
         export PATH=$PATH:/usr/local/kubebuilder/bin      
     - name: Test
-      run: go test ./...
+      # while testing, ensure that coverage is adequate
+      run: |
+        go test ./... -coverprofile=coverage.out
+        export COVERAGE=$(go tool cover -func coverage.out | grep total | awk '{print substr($3, 1, length($3)-1)}')
+        echo "code coverage is at ${COVERAGE}"
+        if [ 1 -eq "$(echo "${COVERAGE} > 65.0" | bc)" ]; then \
+          echo "all good"; 
+        else \
+          echo "coverage is not at 65.0 or above";
+          exit 1
+        fi        
     - name: Get golint
       run: go get -u golang.org/x/lint/golint
     - name: Run Vet & Lint
