support -R flag for kubectl
Signed-off-by: Michael Kalantar <kalantar@us.ibm.com>

--- a/testdata/crd/bases/iter8.tools_experiments.yaml
+++ b/testdata/crd/bases/iter8.tools_experiments.yaml
@@ -744,6 +744,40 @@ spec:
                               - GET
                               - POST
                               type: string
+                            mock:
+                              description: Mock enables mocking of metric values,
+                                which is useful in tests and tutorial/documentation.
+                                Iter8 metrics can be either counter (which keep increasing
+                                over time) or gauge (which can increase or decrease
+                                over time). Mock enables mocking of both.
+                              items:
+                                description: 'NamedLevel contains the name of a version
+                                  and the level of the version to be used in mock
+                                  metric generation. The semantics of level are the
+                                  following: If the metric is a counter, if level
+                                  is x, and time elapsed since the start of the experiment
+                                  is y, then x*y is the metric value. Note: this will
+                                  keep increasing over time as counters do. If the
+                                  metric is gauge, if level is x, the metric value
+                                  is a random value with mean x. Note: due to randomness,
+                                  this stay around x but can go up or down as a gauges
+                                  do.'
+                                properties:
+                                  level:
+                                    anyOf:
+                                    - type: integer
+                                    - type: string
+                                    description: Level of the version
+                                    pattern: ^(\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))(([KMGTPE]i)|[numkMGTPE]|([eE](\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))))?$
+                                    x-kubernetes-int-or-string: true
+                                  name:
+                                    description: Name of the version
+                                    type: string
+                                required:
+                                - level
+                                - name
+                                type: object
+                              type: array
                             params:
                               description: Params are key/value pairs corresponding
                                 to HTTP request parameters Value may be templated,
@@ -802,9 +836,6 @@ spec:
                                 time using Secret. Placeholder substitution will be
                                 attempted only when Secret != nil.
                               type: string
-                          required:
-                          - jqExpression
-                          - urlTemplate
                           type: object
                       type: object
                       x-kubernetes-embedded-resource: true
